--- a/tests/Application/config/packages/_sylius.yaml
+++ b/tests/Application/config/packages/_sylius.yaml
@@ -17,4 +17,4 @@ sylius_channel:
     resources:
         channel:
             classes:
-                model: Tests\FitraTech\SyliusFacebookMessengerPlugin\Entity\Channel\Channel
+                model: Tests\FitraTech\SyliusFacebookMessengerPlugin\App\Entity\Channel\Channel
