--- a/tests/Application/config/packages/doctrine.yaml
+++ b/tests/Application/config/packages/doctrine.yaml
@@ -21,4 +21,4 @@ doctrine:
                 is_bundle: false
                 type: annotation
                 dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'Tests\FitraTech\SyliusFacebookMessengerPlugin\Entity'
+                prefix: 'Tests\FitraTech\SyliusFacebookMessengerPlugin\App\Entity'
