--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "A plugin to integrate facebook messenger chat box in Sylius.",
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "sylius/sylius": "^1.7.5"
     },
     "require-dev": {
@@ -20,11 +20,10 @@
         "friends-of-behat/suite-settings-extension": "^1.0",
         "friends-of-behat/symfony-extension": "^2.1",
         "friends-of-behat/variadic-extension": "^1.3",
-        "lakion/mink-debug-extension": "^1.2.3",
-        "phpspec/phpspec": "^6.1",
-        "phpstan/phpstan": "0.12.25",
-        "phpstan/phpstan-doctrine": "0.12.13",
-        "phpstan/phpstan-webmozart-assert": "0.12.4",
+        "phpspec/phpspec": "^7.0",
+        "phpstan/phpstan": "0.12.82",
+        "phpstan/phpstan-doctrine": "0.12.33",
+        "phpstan/phpstan-webmozart-assert": "0.12.12",
         "phpunit/phpunit": "^8.5",
         "sensiolabs/security-checker": "^6.0",
         "sylius-labs/coding-standard": "^3.1",
